gcp/task-004-traefik/traefik-2.2/who-ingress-route-IP-whitelist.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-whoami
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: PathPrefix(`/whoami-app-api`)
    kind: Rule
    services:
    - name: whoami
      port: 80
    middlewares:
      - name: custom



---


apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: custom
spec:
  ipWhiteList:
    sourceRange:
      - 10.17.0.0/16
